--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "maatwebsite/excel",
+    "name": "hexusdev/excel",
     "description": "An eloquent way of importing and exporting Excel and CSV in Laravel 4 with the power of PHPExcel",
     "license": "LGPL",
     "keywords": ["laravel", "phpexcel", "excel", "csv", "export", "import", "batch"],
